# healthy-menu

./: .gitignore  Makefile  README.md  docker-compose.yml  env_example  load_data.sh  nginx.conf  publish-to-registry.sh  push-to-gitlab.sh  res.yaml  setup-gitlab.sh  setup-models.sh  setup-nexus.sh  tmux.sh
admin-backend/: .dockerignore  Dockerfile  Dockerfile.test  alembic.ini  main.py  pyproject.toml  sonar-project.properties
admin-frontend/: Dockerfile  Dockerfile.test  nginx.conf  package-lock.json  package.json  sonar-project.properties  svelte.config.js
backend/: Dockerfile.main  alembic.ini  load_data.sh
backend-admin/: main.py
ci-pipelines/: build.groovy  deploy_gitops.groovy  docker.groovy
courier-backend/: Dockerfile  main.py  pyproject.toml  sonar-project.properties
courier-frontend/: Dockerfile  Dockerfile.test  package-lock.json  package.json  res.txt  sonar-project.properties  vite.config.js  vitest.config.js
csv_data/: daily_norms.csv  food.csv  food_category_ru.csv  food_nutrient.csv  food_tmp.sql  nutrient.csv
debug-env/: Dockerfile  app.py  deployment.yaml  test-configs.yaml  test-vault-bankvaults.yaml  test-vault-simple.yaml  vault-test.yaml
k8s/: README.md  (+22 more)
order-backend/: .coveragerc  Dockerfile  Dockerfile.test  main.py  pyproject.toml  requirements.txt  sonar-project.properties
order-backend/api/: dishes.py  nutrients.py  orders.py  schemas.py
order-backend/core/: config.py  kafka.py
order-backend/shared/: database.py  models.py  shared_models.py
order-backend/tests/: clean_test_db.py  conftest.py  test_api.py  test_db.py
(+550 files in other folders)
